pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec__577-images.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 159
expression: "replace_system_specific_urls(render_to_string(markdown_file,\n&iterm2_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/577-images.md
---
[35mfoo[0m[35m[1][0m

[35m[1]: [0m]8;;file://HOSTNAME/WORKING_DIRECTORY/tests/markdown/commonmark-spec/train.jpg\[35mtrain.jpg[0m]8;;\
