pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec__578-images.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 159
expression: "replace_system_specific_urls(render_to_string(markdown_file,\n&iterm2_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/578-images.md
---
My[35m foo bar[0m[35m[1][0m

[35m[1]: [0m]8;;file://HOSTNAME/ROOT/path/to/train.jpg\[35m/path/to/train.jpg[0m]8;;\[35m title[0m
